<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity20">

    <ImageView
        android:id="@+id/imageViewLogoUnifor"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_unifor_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_unifor" />

    <TextView
        android:id="@+id/textViewAdminTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_marginStart="2dp"
        android:layout_marginEnd="8dp"
        android:text="@string/admin_title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogoUnifor"
        app:layout_constraintEnd_toStartOf="@+id/button_settings"
        app:layout_constraintStart_toEndOf="@+id/imageViewLogoUnifor"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogoUnifor" />

    <ImageButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewLogoUnifor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewLogoUnifor"
        android:contentDescription="@string/configura_es" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content" android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoUnifor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_background"
            android:contentDescription="@string/cd_search_input"
            android:hint="@string/search_hint"
            android:padding="12dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionSearch"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewBooksSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_books_section"
        android:text="@string/books_section_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLivros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:minHeight="240dp"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBooksSectionTitle"
        tools:listitem="@layout/item_livro" />

    <TextView
        android:id="@+id/textViewEventsSectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cd_events_section"
        android:text="@string/events_active_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewLivros" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEventos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="100dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventsSectionTitle"
        tools:listitem="@layout/item_evento"
        tools:orientation="vertical" />

    <LinearLayout
        android:id="@+id/nav_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#3F51B5"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_home_button"
            app:srcCompat="@drawable/icons8_home"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_profile_button"
            app:srcCompat="@drawable/icons8_users_30"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imageButtonBooks"
            android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_books_button"
            app:srcCompat="@drawable/icons8_book_50"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imageButtonEvents"
            android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_events_button"
            app:srcCompat="@drawable/icons8_event_48"
            app:tint="@android:color/white" />

        <ImageButton
            android:id="@+id/imageButtonNotifications"
            android:layout_width="0dp"
            android:layout_height="match_parent" android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cd_notifications_button"
            app:srcCompat="@drawable/notification"
            app:tint="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>